--- a/vercel.json
+++ b/vercel.json
@@ -3,15 +3,20 @@
     "builds": [
         {
             "src": "server.js",
-            "use": "@now/node"
+            "use": "@vercel/node"
         }
     ],
     "routes": [
         {
-            // Specify which paths will route to a destination using a regex
             "src": "/(.*)",
-            // Specify the paths' destination
-            "dest": "server.js"
+            "dest": "server.js",
+            "methods": [
+                "GET",
+                "POST",
+                "PUT",
+                "DELETE",
+                "OPTIONS"
+            ]
         }
     ]
 }
